mi segunda página

--- a/p2.html
+++ b/p2.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        <p>soy practica 2</p>
+        <p>soy practica 2git addd</p>
     </body>
 </html>
