--- a/basic3.html
+++ b/basic3.html
@@ -6,6 +6,9 @@
         </title>
     </head>
     <body>
-        <p>soy practica 2git addd</p>
+        
+        <p>este es un parrafo</p>
+        <p>este es otro parrafo</p>
+
     </body>
 </html>
