--- a/element1.html
+++ b/element1.html
@@ -8,7 +8,7 @@
     <body>
 
         <h1>mi primer encabezado</h1>
-        <p>mi primer parrafo</p>
-        
+        <p>mi primer parrafo.</p>
+
     </body>
 </html>
