--- a/formatting4.html
+++ b/formatting4.html
@@ -2,14 +2,13 @@
 <html>
     <head>
         <title>
-            pagina 35
+            pagina 36
         </title>
     </head>
     <body>
-
         <p>Este texto es normal</p>
 
-        <p><strong>¡Este texto es importante!</strong></p>
+        <p><i>Este texto esta en cursiva</i></p>
+        
     </body>
-    
 </html>
